tdf#127989 OOXML: fix import of FillBackground property

Set the FillBackground property of the hatching fill to false,
if the alpha value is 0 in the <a:bgClr> element.

Change-Id: I483d5c654be55e74c9073769b06f185526429635